<resources>
    <string name="app_name">Android About Library Sample</string>

    <string name="app_box">App box</string>
    <string name="author_box">Author box</string>
    <string name="other_projects_box">Other projects box</string>

    <string name="show">Show</string>
    <string name="reset">Reset</string>

    <string name="language">Language</string>

    <string name="aboutlibrary_main_params">Main parameters</string>
    <string name="aboutlibrary_sections">Sections</string>
    <string name="aboutlibrary_others">Others</string>

    <string name="aboutlibrary_flat_buttons">Flat buttons</string>

    <string name="app_of_about">App</string>

    <string name="show_error_view">Show error view</string>
</resources>
