<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ Project: android-about-library
  ~ File: activity_main.xml
  ~
  ~ Created by fattazzo
  ~ Copyright © 2018 Gianluca Fattarsi. All rights reserved.
  ~
  ~ MIT License
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:project="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/paramsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/buttonsLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/appCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/app_box" />

            <CheckBox
                android:id="@+id/authorCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/author_box" />

            <CheckBox
                android:id="@+id/otherProjectsCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/other_projects_box" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/language" />

            <Spinner
                android:id="@+id/langSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_of_about" />

            <Spinner
                android:id="@+id/appSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/errorViewCheckBox"
                android:text="@string/show_error_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="254dp" />
        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/loadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/show"
            project:layout_constraintBottom_toBottomOf="parent"
            project:layout_constraintEnd_toStartOf="@+id/guideline"
            project:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            project:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:text="@string/reset"
            project:layout_constraintBottom_toBottomOf="parent"
            project:layout_constraintEnd_toEndOf="parent"
            project:layout_constraintStart_toStartOf="@+id/guideline" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>